--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul id="menu" class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link active" href="index.html">Homesss</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#Certificates">Certificates</a></li>
                     <li class="nav-item"><a class="nav-link" href="#project_portfolio">Protfolio</a></li>
                     <li class="nav-item"><a class="nav-link" href="#aboutme">Profile</a></li>
