--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfoliossssssssssssssss</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -53,9 +53,7 @@
                 <div class="col-lg-6">
                     <div class="banner-title">
                         <h1 class="title">ASIF JAVED</h1>
-                        <p class="lead">Web Developer proficient in HTML, and CSS, Wordpress, and CodeIgniter frameworks
-                            of php and working on REACT JS. Over the last 1 years, I have focused on website
-                            development, debugging errors and customization</p>
+                        <p class="lead">2 years experienced web development with hands-on experience in identifying web-based user interactions along with designing & implementing highly responsive user interface components by deploying React concepts. Proficient in translating designs & wireframes into high-quality code, and writing application interface code via JavaScript and React-JS workflows.</p>
                     </div>
                 </div>
             </div>
