--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="certificate">
-                        <h3 class="course"><i class="fab fa-wordpress"></i> Wordpress web Developer</h3>
+                        <h3 class="course"><i class="fa-brands fa-php"></i> Wordpress web Developer</h3>
                         <p class="course-detail">Complete Wordpress websites Developer course from Udemy</p>
                         <a target="_blank"
                             href="https://www.udemy.com/certificate/UC-361d4f84-8c4d-488a-a71d-daa2f2434f42/"><img
