--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
                 <div class="col-lg-6">
                     <div class="banner-title">
                         <h1 class="title">ASIF JAVED</h1>
-                        <p class="lead">2 years experienced web development with hands-on experience in identifying web-based user interactions along with designing & implementing highly responsive user interface components by deploying React concepts. Proficient in translating designs & wireframes into high-quality code, and writing application interface code via JavaScript and React-JS workflows.</p>
+                        <p class="lead">Web Developer proficient in HTML, and CSS, Wordpress, and CodeIgniter frameworks
+                            of php and working on REACT JS. Over the last 1 years, I have focused on website
+                            development, debugging errors and customization</p>
                     </div>
                 </div>
             </div>
@@ -106,11 +108,20 @@
                 </div>
                 <div class="col-md-6">
                     <div class="certificate">
-                        <h3 class="course"><i class="fab fa-wordpress"></i> Wordpress web Developer</h3>
+                        <h3 class="course"><i class="fa-brands fa-php"></i> Wordpress web Developer</h3>
                         <p class="course-detail">Complete Wordpress websites Developer course from Udemy</p>
                         <a target="_blank"
                             href="https://www.udemy.com/certificate/UC-361d4f84-8c4d-488a-a71d-daa2f2434f42/"><img
                                 src="img/u-wordpress.jpg" alt=""></a>
+                    </div>
+                </div>
+                 <div class="col-md-6">
+                    <div class="certificate">
+                        <h3 class="course"><i class="fab fa-wordpress"></i> PHP & MySQL Certification</h3>
+                        <p class="course-detail">PHP & MySQL Certification course from Udemy</p>
+                        <a target="_blank"
+                            href="https://www.udemy.com/certificate/UC-cda7127a-ae9e-4d3f-8993-c7f281e77053/"><img
+                                src="img/u-php.jpg" alt=""></a>
                     </div>
                 </div>
             </div>
