--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 </div>
                  <div class="col-md-6">
                     <div class="certificate">
-                        <h3 class="course"><i class="fab fa-wordpress"></i> PHP & MySQL Certification</h3>
+                        <h3 class="course"><i class="fa-brands fa-php"></i> PHP & MySQL Certification</h3>
                         <p class="course-detail">PHP & MySQL Certification course from Udemy</p>
                         <a target="_blank"
                             href="https://www.udemy.com/certificate/UC-cda7127a-ae9e-4d3f-8993-c7f281e77053/"><img
