--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             href="https://www.udemy.com/certificate/UC-357f9117-470b-4f2f-9f99-2d46d4aacd48/"><img
                                 src="img/u-react.jpg" alt=""></a>
                         <h3 class="course mt-2"><i class="fab fa-react"></i> React Js</h3>
-                        <p class="course-detail">Complete React Js Course - Basic to Advance from Udemy</p>
+                        <p class="course-detail">Complete React Js Course - Basic to Advance</p>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -112,7 +112,7 @@
                             href="https://www.udemy.com/certificate/UC-361d4f84-8c4d-488a-a71d-daa2f2434f42/"><img
                                 src="img/u-wordpress.jpg" alt=""></a>
                         <h3 class="course"><i class="fa-brands fa-php"></i> Wordpress web Developer</h3>
-                        <p class="course-detail">Complete Wordpress websites Developer course from Udemy</p>
+                        <p class="course-detail">Complete Wordpress websites Developer course</p>
                     </div>
                 </div>
                  <div class="col-md-4">
@@ -121,7 +121,7 @@
                             href="https://www.udemy.com/certificate/UC-cda7127a-ae9e-4d3f-8993-c7f281e77053/"><img
                                 src="img/u-php.jpg" alt=""></a>
                         <h3 class="course"><i class="fa-brands fa-php"></i> PHP & MySQL Certification</h3>
-                        <p class="course-detail">PHP & MySQL Certification course from Udemy</p>
+                        <p class="course-detail">PHP & MySQL Certification course</p>
                     </div>
                 </div>
             </div>
