--- a/index.html
+++ b/index.html
@@ -89,6 +89,22 @@
                     <p>Tools : wordpress</p>
                 </div>
             </div>
+           <div class="col-sm-6 col-md-4">
+            <div class="service-box">
+                <a target="_blank" href="https://www.thejunglecollective.com.au/plant-accessories-store/"><img class="img-fluid"
+                        src="./img/Jungle.png" alt=""></a>
+                <p class="mt-3">The jungle collective. | 2021 - Present</p>
+                <p>Tools : wordpress</p>
+            </div>
+        </div>
+       <div class="col-sm-6 col-md-4">
+        <div class="service-box">
+            <a target="_blank" href="https://www.thehighroad.co.za/"><img class="img-fluid"
+                    src="./img/high-road.png" alt=""></a>
+            <p class="mt-3">The HIGH ROAD | 2022 - Present</p>
+            <p>Tools : wordpress</p>
+        </div>
+    </div>
         </div>
     </div>
     <div id="Certificates" class="section">
