--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
             </div>
            <div class="col-sm-6 col-md-4">
             <div class="service-box">
-                <a target="_blank" href="https://www.thejunglecollective.com.au/plant-accessories-store/"><img class="img-fluid"
+                <a target="_blank" href="https://www.thejunglecollective.com.au/plant-accessories-store/"><img class="img-fluid w-50"
                         src="./img/Jungle.png" alt=""></a>
                 <p class="mt-3">The jungle collective. | 2021 - Present</p>
                 <p>Tools : wordpress</p>
             </div>
         </div>
-       <div class="col-sm-6 col-md-4">
+       <div class="col-sm-6 col-md-4 my-auto">
         <div class="service-box">
             <a target="_blank" href="https://www.thehighroad.co.za/"><img class="img-fluid"
                     src="./img/high-road.png" alt=""></a>
