--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </div>
        <div class="col-sm-6 col-md-4 my-auto">
         <div class="service-box">
-            <a target="_blank" href="https://www.thehighroad.co.za/"><img class="img-fluid"
+            <a target="_blank" href="https://www.thehighroad.co.za/"><img class="img-fluid w-75"
                     src="./img/high-road.png" alt=""></a>
             <p class="mt-3">The HIGH ROAD | 2022 - Present</p>
             <p>Tools : wordpress</p>
