--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
                 <div class="col-lg-6">
                     <div class="banner-title">
                         <h1 class="title">ASIF JAVED</h1>
-                        <p class="lead">Web Developer proficient in HTML, and CSS, Wordpress, and CodeIgniter frameworks
-                            of php and working on REACT JS. Over the last 1 years, I have focused on website
-                            development, debugging errors and customization</p>
+                        <p class="lead">2 years experienced web development with hands-on experience in identifying webbased user interactions along with designing & implementing highly responsive user interface components by deploying React concepts. Proficient in translating designs & wireframes into high-quality code, and writing application interface code via JavaScript and React-JS workflows.</p>
                     </div>
                 </div>
             </div>
