--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <div class="col-md-12">
                     <h2 class="section-head text-white">Certificates <i class="fa fa-award"></i></h2>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <div class="certificate">
                         <a target="_blank"
                             href="https://www.udemy.com/certificate/UC-357f9117-470b-4f2f-9f99-2d46d4aacd48/"><img
@@ -120,7 +120,7 @@
                         <p class="course-detail">Complete React Js Course - Basic to Advance</p>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <div class="certificate">
                         <a target="_blank"
                             href="https://www.udemy.com/certificate/UC-361d4f84-8c4d-488a-a71d-daa2f2434f42/"><img
@@ -129,13 +129,22 @@
                         <p class="course-detail">Complete Wordpress websites Developer course</p>
                     </div>
                 </div>
-                 <div class="col-md-4">
+                 <div class="col-md-6">
                     <div class="certificate">
                          <a target="_blank"
                             href="https://www.udemy.com/certificate/UC-cda7127a-ae9e-4d3f-8993-c7f281e77053/"><img
                                 src="img/u-php.jpg" alt=""></a>
                         <h3 class="course"><i class="fa-brands fa-php"></i> PHP & MySQL Certification</h3>
                         <p class="course-detail">PHP & MySQL Certification course</p>
+                    </div>
+                </div>
+                  <div class="col-md-6">
+                    <div class="certificate">
+                         <a target="_blank"
+                            href="https://www.freecodecamp.org/certification/asif-javed-creative/responsive-web-design"><img
+                                src="img/responsive_web_design.png" alt=""></a>
+                        <h3 class="course"><i class="fa-brands fa-php"></i> Responsive Web Design</h3>
+                        <p class="course-detail">Responsive Web Design</p>
                     </div>
                 </div>
             </div>
