--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
                         <h1 class="title">ASIF JAVED</h1>
                         <p class="lead">2 years experienced web development with hands-on experience in identifying webbased user interactions along with designing & implementing highly responsive user interface components by deploying React concepts. Proficient in translating designs & wireframes into high-quality code, and writing application interface code via JavaScript and React-JS workflows.</p>
                     </div>
-                </div>2 years experienced web development with hands-on experience in identifying webbased user interactions along with designing & implementing highly responsive user interface components by deploying React concepts. Proficient in translating designs & wireframes into high-quality code, and writing application interface code via JavaScript and React-JS workflows.
+                </div>
+            </div>
         </div>
     </div>
     <div class="container section">
@@ -86,6 +87,22 @@
                     <p>Tools : wordpress</p>
                 </div>
             </div>
+           <div class="col-sm-6 col-md-4">
+            <div class="service-box">
+                <a target="_blank" href="https://www.thejunglecollective.com.au/plant-accessories-store/"><img class="img-fluid w-50"
+                        src="./img/Jungle.png" alt=""></a>
+                <p class="mt-3">The jungle collective. | 2021 - Present</p>
+                <p>Tools : wordpress</p>
+            </div>
+        </div>
+<!--        <div class="col-sm-6 col-md-4 my-auto">
+        <div class="service-box">
+            <a target="_blank" href="https://www.thehighroad.co.za/"><img class="img-fluid w-75"
+                    src="./img/high-road.png" alt=""></a>
+            <p class="mt-3">The HIGH ROAD | 2022 - Present</p>
+            <p>Tools : wordpress</p>
+        </div>
+    </div> -->
         </div>
     </div>
     <div id="Certificates" class="section">
@@ -100,25 +117,34 @@
                             href="https://www.udemy.com/certificate/UC-357f9117-470b-4f2f-9f99-2d46d4aacd48/"><img
                                 src="img/u-react.jpg" alt=""></a>
                         <h3 class="course mt-2"><i class="fab fa-react"></i> React Js</h3>
-                        <p class="course-detail">Complete React Js Course - Basic to Advance from Udemy</p>
+                        <p class="course-detail">Complete React Js Course - Basic to Advance</p>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="certificate">
-                        <h3 class="course"><i class="fa-brands fa-php"></i> Wordpress web Developer</h3>
-                        <p class="course-detail">Complete Wordpress websites Developer course from Udemy</p>
                         <a target="_blank"
                             href="https://www.udemy.com/certificate/UC-361d4f84-8c4d-488a-a71d-daa2f2434f42/"><img
                                 src="img/u-wordpress.jpg" alt=""></a>
+                        <h3 class="course"><i class="fa-brands fa-php"></i> Wordpress web Developer</h3>
+                        <p class="course-detail">Complete Wordpress websites Developer course</p>
                     </div>
                 </div>
                  <div class="col-md-6">
                     <div class="certificate">
-                        <h3 class="course"><i class="fab fa-wordpress"></i> PHP & MySQL Certification</h3>
-                        <p class="course-detail">PHP & MySQL Certification course from Udemy</p>
-                        <a target="_blank"
+                         <a target="_blank"
                             href="https://www.udemy.com/certificate/UC-cda7127a-ae9e-4d3f-8993-c7f281e77053/"><img
                                 src="img/u-php.jpg" alt=""></a>
+                        <h3 class="course"><i class="fa-brands fa-php"></i> PHP & MySQL Certification</h3>
+                        <p class="course-detail">PHP & MySQL Certification course</p>
+                    </div>
+                </div>
+                  <div class="col-md-6">
+                    <div class="certificate">
+                         <a target="_blank"
+                            href="https://www.freecodecamp.org/certification/asif-javed-creative/responsive-web-design"><img
+                                src="img/responsive_web_design.png" alt=""></a>
+                        <h3 class="course"><i class="fa-brands fa-php"></i> Responsive Web Design</h3>
+                        <p class="course-detail">Responsive Web Design</p>
                     </div>
                 </div>
             </div>
