--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
                 <div class="col-lg-6">
                     <div class="banner-title">
                         <h1 class="title">ASIF JAVED</h1>
-                        <p class="lead">2 years experienced web development with hands-on experience in identifying webbased user interactions along with designing & implementing highly responsive user interface components by deploying React concepts. Proficient in translating designs & wireframes into high-quality code, and writing application interface code via JavaScript and React-JS workflows.</p>
+                        <p class="lead">I have 3 years of experience in web development, with a particular focus on WordPress and
+React.js. In this time, I have gained a deep understanding of the WordPress platform, including
+plugin and theme development, and have successfully implemented custom solutions for clients.
+Additionally, my proficiency in React.js has allowed me to design and implement highly responsive
+user interfaces for web applications. I am skilled in translating designs and wireframes into highquality code and am constantly looking for ways to improve my skills and knowledge in these areas.</p>
                     </div>
                 </div>
             </div>
