--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="banner-title">
-                        <h1 class="title">ASIF JAVED</h1>
+                        <h1 class="title">ASIF JAVEDs</h1>
                         <p class="lead">I have 3 years of experience in web development, with a particular focus on WordPress and
 React.js. In this time, I have gained a deep understanding of the WordPress platform, including
 plugin and theme development, and have successfully implemented custom solutions for clients.
