--- a/index.html
+++ b/index.html
@@ -53,11 +53,7 @@
                 <div class="col-lg-6">
                     <div class="banner-title">
                         <h1 class="title">ASIF JAVED</h1>
-                        <p class="lead">I have 3 years of experience in web development, with a particular focus on WordPress and
-React.js. In this time, I have gained a deep understanding of the WordPress platform, including
-plugin and theme development, and have successfully implemented custom solutions for clients.
-Additionally, my proficiency in React.js has allowed me to design and implement highly responsive
-user interfaces for web applications. I am skilled in translating designs and wireframes into highquality code and am constantly looking for ways to improve my skills and knowledge in these areas.</p>
+                        <p class="lead">IExperienced web developer specializing in WordPress and Laravel for four years. Proficient in React.js, Node.js, Magento, and CodeIgniter. Committed to delivering high-quality, user-centric applications through innovative problem-solving and a strong understanding of modern web technologies.</p>
                     </div>
                 </div>
             </div>
