--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-light py-0">
         <div id="header" class="container-fluid">
-            <a class="navbar-brand fs-2" href="/"><i class="fas fa-laptop-code"></i> Code with us</a>
+            <a class="navbar-brand fs-2" href="/"><i class="fas fa-laptop-code"></i> Codeical</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -53,7 +53,7 @@
                 <div class="col-lg-6">
                     <div class="banner-title">
                         <h1 class="title">ASIF JAVED</h1>
-                        <p class="lead">IExperienced web developer specializing in WordPress and Laravel for four years. Proficient in React.js, Node.js, Magento, and CodeIgniter. Committed to delivering high-quality, user-centric applications through innovative problem-solving and a strong understanding of modern web technologies.</p>
+                        <p class="lead">Experienced web developer specializing in WordPress and Laravel for four years. Proficient in React.js, Node.js, Magento, and CodeIgniter. Committed to delivering high-quality, user-centric applications through innovative problem-solving and a strong understanding of modern web technologies.</p>
                     </div>
                 </div>
             </div>
